# exam-grading

./: 1_read_QR_code_move.py  2_new_OMR.py  2_run_OMR.py  3_2_create_answer_folders.py  3_move_pdfs_for_feedback.py  3_upload_PDFs_to_AWS.py  4_create_everything_job.py  4_save_per_page_csvs.py  5_get_student_answers.py  5_upload_jobs_to_prprpr.py  6_create_grading_spreadsheet.py  6_download_jobs_from_prprpr.py  7_get_annotated_PDFs_from_AWS.py  README.md  flatten_pdfs.sh  presentation_config.json  pyproject.toml  questiondb.json  testing_config.json
docs/: README.md  api-reference.md  architecture.md  aws-and-job-management.md  common-utilities.md  configuration.md  core-workflow.md  feedback-system.md  installation.md  user-guide.md
src/exam_grading/: __init__.py  __main__.py  create_everything_job.py  create_grading_spreadsheet.py  download_jobs_from_prprpr.py  email_feedback_to_students.py  generate_student_feedback.py  get_annotated_pdfs_from_aws.py  merge_downloaded_jobs.py  read_qr_codes.py  run_omr.py  split_everything_job.py  upload_jobs_to_prprpr.py  upload_pdfs_to_aws.py
src/exam_grading/common/: __init__.py  anonymization.py  auth.py  config.py  progress.py  roman_numerals.py  validators.py
