[project]
name = "exam-grading"
version = "0.1.0"
description = "2025 Kyle and Paul Faculty Presentation on Exam Grading"
authors = [
    {name = "Max Larsson",email = "maxslarsson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qreader (>=3.16,<4.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "boto3 (>=1.38.24,<2.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "google-api-python-client (>=2.152.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)"
]

[project.scripts]
exam-grading = "exam_grading.__main__:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
